# qhp-specialty-framework

./: AGENTS.md  BUILD_WALKTHROUGH.md  README.md  pyproject.toml  qhp_specialty_framework.py
src/qhp_specialty_framework/: __init__.py  _classify.py  _convenience.py  _data.py  _matrices.py  _models.py  _validate.py  classify.py  convenience.py  matrices.py  models.py  validate.py
tests/: test_classify.py  test_convenience.py  test_validate.py
